# TAICare-api-extractionSP

./: README.md
.github/workflows/: docker-image.yml  main.yml
src/: main.rs
tapo-main/: Cargo.toml  Dockerfile  Makefile.toml
tapo-main/.github/workflows/: docker.yaml
tapo-main/src/: main.rs
