[package]
name = "tapo_mami"
version = "0.1.0"
edition = "2021"

[dependencies]
tapo="0.7.6"
mongodb = "=2.1.0"
bson = { version = "2", features = ["chrono-0_4"] }
tokio = { version = "1.33", features = ["rt-multi-thread", "macros","full"] }
chrono = { version = "0.4", features = ["serde"] }
firebase-rs = "2.0.5"
anyhow = "1.0"
base16ct = { version = "0.1", features = ["alloc"] }
base64 = "0.21"
isahc = { version = "1.7", features = ["json", "cookies"] }
lazy_static = "1.4"
log = "0.4"
openssl = "0.10"
serde = {version = "1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0.2"
smartcore = {version = "0.2.1", features=["serde"]}
time = { version = "0.3", features = ["parsing", "serde", "macros"] }
futures = "0.3"
webpki = "0.22.2"
h2 = "0.3.24"
pretty_env_logger = "0.4"